# home-credit-kaggle

./: .gitignore  helper_functions.py  main_analysis.ipynb  main_shap.ipynb  pyproject.toml  readme.md
